--- a/compiled/css/theflux.css
+++ b/compiled/css/theflux.css
@@ -6236,6 +6236,18 @@ figure.figure-pull-right {
 figure img.ll-notloaded {
   opacity: 0;
 }
+figure img.ll-loaded {
+  opacity: 1;
+}
+.lazyload figure.no-zoom img img {
+  opacity: 1;
+}
+.lazyload figure.no-zoom img img.ll-notloaded {
+  opacity: 1;
+}
+.lazyload figure.no-zoom img img.ll-loaded {
+  opacity: 1;
+}
 .full-width figure {
   margin-top: 0;
 }
@@ -6620,6 +6632,9 @@ header.navigation .divider-vertical {
 .storybar a.story-item:hover .story-item-container .story-item-content p {
   text-decoration: none;
 }
+.navbar.navbar-default .navbar-nav {
+  margin-right: 25px;
+}
 .navbar {
   font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -6637,6 +6652,9 @@ header.navigation .divider-vertical {
   font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: italic;
 }
+.navbar.navbar-default .navbar-brand {
+  height: auto;
+}
 .navbar.navbar-default .dropdown.open .navbar-brand,
 .navbar.navbar-default .dropdown.open #navbar-title {
   color: #333;
@@ -6644,6 +6662,21 @@ header.navigation .divider-vertical {
 }
 .navbar.navbar-default .navbar-nav {
   margin-right: 25px;
+}
+@media (max-width: 767px) {
+  .navbar.navbar-default .navbar-nav {
+    margin: 0;
+    float: left;
+  }
+  .navbar.navbar-default .navbar-left {
+    float: left !important;
+  }
+  .navbar.navbar-default .navbar-right {
+    float: right !important;
+  }
+  .navbar.navbar-default .navbar-nav > li {
+    float: left;
+  }
 }
 .navbar.navbar-default .navbar-nav > li > a {
   color: #FFF;
@@ -6700,12 +6733,43 @@ header.navigation #navbar-product {
   margin: 0;
   border-bottom: 1px solid transparent;
 }
+header.navigation #navbar-product a.navbar-brand {
+  height: 42px;
+  position: relative;
+}
+header.navigation #navbar-product a.navbar-brand span {
+  color: #CCC;
+  font-size: 12px;
+  position: absolute;
+  top: -5px;
+}
+header.navigation #navbar-product #flux-logo-container {
+  height: 40px;
+  padding: 0;
+  margin-top: -5px;
+  overflow: hidden;
+  width: 100px;
+  display: inline-block;
+}
+header.navigation #navbar-product #flux-logo-container svg {
+  width: 100px;
+}
+header.navigation #navbar-product #flux-logo-container svg path {
+  fill: #FFF;
+  -webkit-filter: drop-shadow(-5px -5px 5px #000000);
+  filter: drop-shadow(-5px -5px 5px #000000);
+  /* Same syntax as box-shadow */
+}
 header.navigation #navbar-product .container-fluid {
   position: relative;
 }
 header.navigation #navbar-product.in-article {
   background-color: rgba(255, 255, 255, 0.9);
   border-bottom: 1px solid #CCC;
+  min-height: 64px;
+}
+header.navigation #navbar-product.in-article #flux-logo-container svg path {
+  fill: #444;
 }
 header.navigation #navbar-product.in-article .navbar .navbar-nav {
   margin-right: 0;
@@ -6721,6 +6785,9 @@ header.navigation #navbar-product.in-article .navbar .navbar-nav > li.active > a
 }
 header.navigation #navbar-product.in-article .navbar a.navbar-brand {
   color: #333;
+}
+header.navigation #navbar-product.in-article .navbar a.navbar-brand span {
+  color: #999;
 }
 header.navigation #navbar-product.in-article .navbar a.navbar-brand img {
   width: 36px;
@@ -6761,6 +6828,9 @@ header.navigation #navbar-product.in-article .divider-vertical {
   display: block;
 }
 @media (max-width: 767px) {
+  header.navigation #navbar-product.in-article {
+    min-height: 0;
+  }
   header.navigation #navbar-product.in-article #navbar-title {
     display: none;
   }
@@ -6937,6 +7007,7 @@ header.navigation #navbar-product ul.nav.navbar-nav .dropdown-menu .about-knight
   font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin-top: 0;
 }
+#footer-storybar,
 #navbar-story {
   z-index: 1;
   background-color: #333;
@@ -6944,32 +7015,52 @@ header.navigation #navbar-product ul.nav.navbar-nav .dropdown-menu .about-knight
   -webkit-box-shadow: inset 0 0 50px #000000;
   box-shadow: inset 0 0 50px #000000;
 }
+#footer-storybar .story-item,
 #navbar-story .story-item,
+#footer-storybar a.story-item,
 #navbar-story a.story-item {
   background-color: #000;
   height: 60px;
 }
+#footer-storybar .story-item.tall,
 #navbar-story .story-item.tall,
+#footer-storybar a.story-item.tall,
 #navbar-story a.story-item.tall {
   height: auto;
 }
+#footer-storybar .story-item.tall .story-item-background,
 #navbar-story .story-item.tall .story-item-background,
+#footer-storybar a.story-item.tall .story-item-background,
 #navbar-story a.story-item.tall .story-item-background {
   height: auto;
 }
+#footer-storybar .story-item.tall .story-item-container,
 #navbar-story .story-item.tall .story-item-container,
+#footer-storybar a.story-item.tall .story-item-container,
 #navbar-story a.story-item.tall .story-item-container {
   height: auto;
 }
+#footer-storybar .story-item.tall .story-item-container .story-item-content p,
 #navbar-story .story-item.tall .story-item-container .story-item-content p,
+#footer-storybar a.story-item.tall .story-item-container .story-item-content p,
 #navbar-story a.story-item.tall .story-item-container .story-item-content p {
   display: block;
 }
+#footer-storybar .story-item .story-item-background,
 #navbar-story .story-item .story-item-background,
+#footer-storybar a.story-item .story-item-background,
 #navbar-story a.story-item .story-item-background,
+#footer-storybar .story-item .story-item-container,
 #navbar-story .story-item .story-item-container,
+#footer-storybar a.story-item .story-item-container,
 #navbar-story a.story-item .story-item-container {
   height: 60px;
+}
+#footer-storybar {
+  margin-top: 0px;
+  padding-top: 60px;
+  background-color: #FFF;
+  box-shadow: none;
 }
 .story-cover {
   width: 100%;
@@ -6999,6 +7090,11 @@ header.navigation #navbar-product ul.nav.navbar-nav .dropdown-menu .about-knight
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
+}
+.story-cover .story-cover-image video {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
 }
 .story-cover .story-cover-arrow {
   bottom: 25px;
@@ -7106,6 +7202,9 @@ header.navigation #navbar-product ul.nav.navbar-nav .dropdown-menu .about-knight
   #story-cover .story-cover-arrow {
     display: none;
   }
+}
+g path {
+  fill: #333;
 }
 #flux-logo-container {
   position: relative;
@@ -7266,6 +7365,11 @@ header.navigation #navbar-product ul.nav.navbar-nav .dropdown-menu .about-knight
   display: block;
   height: 52px;
 }
+@media (max-width: 767px) {
+  .profile-nav.profile-nav-sticky {
+    display: none;
+  }
+}
 .profile-nav.profile-nav-sticky .navbar.navbar-default {
   margin-bottom: 0;
 }
@@ -7285,6 +7389,7 @@ header.navigation #navbar-product ul.nav.navbar-nav .dropdown-menu .about-knight
 .profile-nav.profile-nav-sticky a.profile-button h3 {
   font-size: 16px;
   line-height: 16px;
+  opacity: 0;
 }
 .profile-nav.profile-nav-sticky a.profile-button p {
   display: none;
@@ -7301,6 +7406,9 @@ header.navigation #navbar-product ul.nav.navbar-nav .dropdown-menu .about-knight
 }
 .profile-nav.profile-nav-sticky:hover a.profile-button p {
   display: block;
+}
+.profile-nav.profile-nav-sticky:hover a.profile-button h3 {
+  opacity: 1;
 }
 .profile {
   margin-top: 100px;
